--- a/src/styles.css
+++ b/src/styles.css
@@ -93,9 +93,18 @@ a {
     font-weight: bold;
 }
 
-/* styling for view order button */
-#viewOrderBtn {
-    /* position: fixed; */
+.quantity-input {
+    width: 3em;
+    margin-left: 0.2em;
+    margin-right: 0.2em;
+
+}
+
+.up-arrow, .down-arrow {
+    width: 2em;
+    height: 2em;
+    background-color: #2cd679;
+    cursor: pointer;
 }
 
 
